Changes for building the cnn

--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -51,6 +51,8 @@
     "import pandas as pd\n",
     "from keras import backend as K\n",
     "from PIL import Image\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPool2D\n",
     "\n",
     "# Load the TensorBoard notebook extension\n",
     "%load_ext tensorboard\n",
@@ -196,24 +198,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## __Define our target__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#our target is are the labels in the dataframe. For the cnn we don't have to split the data into X and y we can feed it only a part of\n",
-    "#the data as a train set and another part as a data set."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## __Do train & test split__"
    ]
   },
@@ -228,6 +212,104 @@
     "    testset = df.drop(trainset.index)\n",
     "    return trainset,testset\n",
     "    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do this again and split the train set, so we can produce a validation set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_validation_split(df,percentage):#percentage as 0.anything, we want to have for our train set\n",
+    "    trainset = df.sample(frac = percentage)\n",
+    "    evalset = df.drop(trainset.index)\n",
+    "    return trainset,evalset"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have to convert the test and train data into an array, which is the acceptable form of tensorflow and keras."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = np.array(trainset, dtype = 'float32')\n",
+    "test_data = np.array(testset, dtype = 'float32')\n",
+    "validation_data = np.array(valset, dtype = 'float32')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''#if we can use the normal way we can split with sklearn\n",
+    "x_train,x_validate,y_train,y_validate = train_test_split(x_train,y_train,test_size = 0.2,random_state = 12345)'''"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reshape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## __Define our target__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#our target is are the labels in the dataframe. For the cnn we don't have to split the data into X and y we can feed it only a part of\n",
+    "#the data as a train set and another part as a data set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#here we define our target by splitting the \n",
+    "x_train = train_data[:,1:]/255\n",
+    "\n",
+    "y_train = train_data[:,0]\n",
+    "\n",
+    "x_test= test_data[:,1:]/255\n",
+    "\n",
+    "y_test=test_data[:,0]"
    ]
   },
   {
@@ -291,7 +373,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Define model metrics for the cnn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "swizzle_model.compile(loss ='sparse_categorical_crossentropy', optimizer=Adam(lr=0.001),metrics =['accuracy'])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## __Train CNN__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "784"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "history = swizzle_model.fit(\n",
+    "    x_train,\n",
+    "    y_train,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    epochs=EPOCHS,\n",
+    "    verbose=1,\n",
+    "    validation_data=(x_validate,y_validate),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#show plots for our loss function and the accurancy\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "\n",
+    "plt.subplot(2, 2, 1)\n",
+    "plt.plot(history.history['loss'], label='Loss')\n",
+    "plt.plot(history.history['val_loss'], label='Validation Loss')\n",
+    "plt.legend()\n",
+    "plt.title('Training - Loss Function')\n",
+    "\n",
+    "plt.subplot(2, 2, 2)\n",
+    "plt.plot(history.history['acc'], label='Accuracy')\n",
+    "plt.plot(history.history['val_acc'], label='Validation Accuracy')\n",
+    "plt.legend()\n",
+    "plt.title('Train - Accuracy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print results of our swizzle model metrics\n",
+    "score = swizzle_model.evaluate(x_test,y_test,verbose=0)\n",
+    "print('Test Loss : {:.4f}'.format(score[0]))\n",
+    "print('Test Accuracy : {:.4f}'.format(score[1]))"
    ]
   }
  ],
