Changes for building the cnn

--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -40,19 +40,35 @@
    ],
    "source": [
     "# Import required packages \n",
+    "#tensorflow\n",
     "import tensorflow as tf\n",
     "import tensorflow_hub as hub\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.keras import layers\n",
+    "\n",
+    "#various\n",
     "import datetime\n",
     "import pathlib\n",
     "import IPython.display as display\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "import pandas as pd\n",
-    "from keras import backend as K\n",
     "from PIL import Image\n",
+    "\n",
+    "#keras\n",
+    "import keras\n",
+    "from keras.datasets import mnist\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Dropout, Flatten\n",
+    "from keras.layers import Conv2D, MaxPooling2D\n",
+    "from keras.callbacks import ReduceLROnPlateau\n",
+    "from keras import backend as K\n",
+    "\n",
+    "\n",
+    "#sklearn\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPool2D\n",
+    "\n",
     "\n",
     "# Load the TensorBoard notebook extension\n",
     "%load_ext tensorboard\n",
@@ -198,7 +214,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## __Define our target__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#our target is are the labels in the dataframe. For the cnn we don't have to split the data into X and y we can feed it only a part of\n",
+    "#the data as a train set and another part as a data set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = 'audio file'\n",
+    "y = annotations"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## __Do train & test split__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''#if we can use the normal way we can split with sklearn\n",
+    "x_train,x_validate,y_train,y_validate = train_test_split(x_train,y_train,test_size = 0.2,random_state = 12345)'''"
    ]
   },
   {
@@ -254,46 +308,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''#if we can use the normal way we can split with sklearn\n",
-    "x_train,x_validate,y_train,y_validate = train_test_split(x_train,y_train,test_size = 0.2,random_state = 12345)'''"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reshape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## __Define our target__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#our target is are the labels in the dataframe. For the cnn we don't have to split the data into X and y we can feed it only a part of\n",
-    "#the data as a train set and another part as a data set."
+    "## __Reshape__\n",
+    "\n",
+    "Now we shall build the CNN!\n",
+    "\n",
+    "Actually, no.\n",
+    "\n",
+    "We'll have to do one final step of reshaping ALL the data before we go forward to build it.\n",
+    "\n",
+    "Why do we need to reshape the data? Because each data point is in the form of a single row. In this CNN example, we're going to work with IMAGES.\n",
+    "\n",
+    "The CNN needs images to extract coarse and fine features so that it can train and classify them."
    ]
   },
   {
@@ -302,14 +331,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#here we define our target by splitting the \n",
-    "x_train = train_data[:,1:]/255\n",
-    "\n",
-    "y_train = train_data[:,0]\n",
-    "\n",
-    "x_test= test_data[:,1:]/255\n",
-    "\n",
-    "y_test=test_data[:,0]"
+    "im_shape = (FRAME_HEIGHT, FRAME_WIDTH, 1)\n",
+    "x_train = train_data.reshape(train_data.shape[0], *im_shape) # Python TIP :the * operator unpacks the tuple\n",
+    "x_test = test_data.reshape(test_data[0], *im_shape)"
    ]
   },
   {
@@ -373,7 +397,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define model metrics for the cnn"
+    "## Define model metrics for the cnn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = tf.keras.optimizers.Adam(learning_rate=0.001)\n",
+    "\n",
+    "#RMSprop(lr=0.001, rho=0.9, epsilon=1e-08, decay=0.0) \n",
+    "#adadelta"
    ]
   },
   {
@@ -382,7 +418,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "swizzle_model.compile(loss ='sparse_categorical_crossentropy', optimizer=Adam(lr=0.001),metrics =['accuracy'])"
+    "swizzle_model.compile(loss ='sparse_categorical_crossentropy', optimizer= optimizer, metrics =['accuracy'])\n",
+    "#we use sparse_categorical_crossentropy because we have a one-hot-encoding for every note. so we have only 0 and 1. If we have more\n",
+    "#numbers like this, we have to use categorical_crossentropy.\n",
+    "#we use accuracy because we want to have a good overall performance of the model. Besides that for us, every tone \n",
+    "#has the same importance so all classes have same importance."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use annealer to decrease learning rate in each epoch"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the ReduceLROnPlateau function from Keras.callbacks, we choose to reduce the LR by half if the accuracy is not improved after 3 epochs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set a learning rate annealer\n",
+    "learning_rate_reduction = ReduceLROnPlateau(monitor='val_acc', patience=3, verbose=1, factor=0.5, min_lr=0.0001)"
    ]
   },
   {
@@ -417,6 +483,7 @@
     "    epochs=EPOCHS,\n",
     "    verbose=1,\n",
     "    validation_data=(x_validate,y_validate),\n",
+    "    callbacks=[learning_rate_reduction],\n",
     ")"
    ]
   },
@@ -452,6 +519,15 @@
     "score = swizzle_model.evaluate(x_test,y_test,verbose=0)\n",
     "print('Test Loss : {:.4f}'.format(score[0]))\n",
     "print('Test Accuracy : {:.4f}'.format(score[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "swizzle_model.save('cnn_Tabs_of_songs_with_20_epochs.h5')"
    ]
   }
  ],
