preprocessing notebook bug fix.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -483,6 +483,7 @@
     "n_frames = fps * dur\n",
     "n_frames_int = int(np.round(n_frames, 0))\n",
     "\n",
+    "# ToDo: label variables with f string\n",
     "print(dur, fps, n_frames, n_frames_int)"
    ]
   },
@@ -578,7 +579,7 @@
    "outputs": [],
    "source": [
     "def midi_to_fret(midi_notes):\n",
-    "    tuning = [40,45,50,55,59,64]\n",
+    "    tuning = [40, 45, 50, 55, 59, 64]\n",
     "    fretboard = np.zeros((len(midi_notes), 6, 21))\n",
     "    \n",
     "    # 1: get string played\n",
@@ -671,7 +672,7 @@
     "        os.makedirs(save_path)\n",
     "    \n",
     "    np.savez(save_path + filename + \"_data.npz\", data)\n",
-    "    np.savez(save_path + filename + \"_labels.npz\", data)"
+    "    np.savez(save_path + filename + \"_labels.npz\", labels)"
    ]
   },
   {
