--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -547,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.8 (main, Oct 17 2022, 15:26:33) \n[Clang 13.0.0 (clang-1300.0.29.3)]"
   },
   "orig_nbformat": 4,
   "vscode": {
