--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -32,7 +32,6 @@
    "source": [
     "# Import required packages \n",
     "\n",
-    "\n",
     "#various\n",
     "import datetime\n",
     "import pathlib\n",
@@ -156,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import variables from our file\n",
+    "#Definition of all our constants we use for our model \n",
     "\n",
     "FRAME_HEIGHT = 192\n",
     "FRAME_WIDTH = 9\n",
@@ -233,6 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#we load the data from our output folder from preprocessing\n",
     "OUTPUT_PATH = \"../data/output/\"\n",
     "audio_file = \"02_BN1-129-Eb_solo_hex_cln.wav\"\n",
     "\n",
@@ -249,28 +249,13 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First we have to split our dataset into train and test set. We use 70% for the train set and 30% for the test set."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#First we have to split our dataset into train and test set. We use 70% for the train set and 30% for the test set.\n",
     "x_train, x_test, y_train, y_test = train_test_split(X['arr_0'], y['arr_0'], test_size= 0.3, random_state= RSEED )"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Because we need also a validation set we split once more. We take this time 10% of the train set for the validation set and take the rest for training."
    ]
   },
   {
@@ -279,7 +264,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#Because we need also a validation set we split once more. We take this time 10% of the train set for \n",
+    "#the validation set and take the rest for training.\n",
     "x_train,x_validate,y_train,y_validate = train_test_split(x_train,y_train, test_size = 0.1,random_state = RSEED)"
    ]
   },
@@ -302,7 +288,7 @@
     }
    ],
    "source": [
-    "#here are the diffrent shapes of our sets\n",
+    "#let's have a look on the different shapes of our sets\n",
     "print(x_train.shape)\n",
     "print(x_test.shape)\n",
     "print(x_validate.shape)\n",
@@ -345,16 +331,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#the function of our cnn model\n",
+    "'''what it takes:\n",
+    "- a picture with a certain frame height(192pixel) and a frame width(9 pixel)\n",
+    "- only one color channel, therefore as a grayscale image\n",
+    "\n",
+    "what it deliver:\n",
+    "\n",
+    "An array with the size 6x21. This is representing the 6 different strings of a guitar and 19 different \n",
+    "frets of the guitar. The other 2 of the 21 entries represent, if a string is played or not played.\n",
+    "\n",
+    "The different layers we used you can easily extract from below.\n",
+    "'''\n",
+    "\n",
     "def cnn_swizzle_model():       \n",
     "        swizzle_model = tf.keras.Sequential()\n",
     "        swizzle_model.add(tf.keras.layers.InputLayer(input_shape=[FRAME_HEIGHT, FRAME_WIDTH, 1]))\n",
@@ -375,46 +369,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#this is our swizzle model\n",
+    "swizzle_model = cnn_swizzle_model()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Metal device set to: Apple M1\n",
-      "\n",
-      "systemMemory: 8.00 GB\n",
-      "maxCacheSize: 2.67 GB\n",
-      "\n",
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d (Conv2D)             (None, 190, 7, 32)        320       \n",
+      " conv2d_6 (Conv2D)           (None, 190, 7, 32)        320       \n",
       "                                                                 \n",
-      " conv2d_1 (Conv2D)           (None, 188, 5, 64)        18496     \n",
+      " conv2d_7 (Conv2D)           (None, 188, 5, 64)        18496     \n",
       "                                                                 \n",
-      " conv2d_2 (Conv2D)           (None, 186, 3, 64)        36928     \n",
+      " conv2d_8 (Conv2D)           (None, 186, 3, 64)        36928     \n",
       "                                                                 \n",
-      " max_pooling2d (MaxPooling2D  (None, 93, 1, 64)        0         \n",
-      " )                                                               \n",
+      " max_pooling2d_2 (MaxPooling  (None, 93, 1, 64)        0         \n",
+      " 2D)                                                             \n",
       "                                                                 \n",
-      " dropout (Dropout)           (None, 93, 1, 64)         0         \n",
+      " dropout_4 (Dropout)         (None, 93, 1, 64)         0         \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 5952)              0         \n",
+      " flatten_2 (Flatten)         (None, 5952)              0         \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 128)               761984    \n",
+      " dense_6 (Dense)             (None, 128)               761984    \n",
       "                                                                 \n",
-      " dropout_1 (Dropout)         (None, 128)               0         \n",
+      " dropout_5 (Dropout)         (None, 128)               0         \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 128)               16512     \n",
+      " dense_7 (Dense)             (None, 128)               16512     \n",
       "                                                                 \n",
-      " dense_2 (Dense)             (None, 126)               16254     \n",
+      " dense_8 (Dense)             (None, 126)               16254     \n",
       "                                                                 \n",
-      " reshape (Reshape)           (None, 6, 21)             0         \n",
+      " reshape_2 (Reshape)         (None, 6, 21)             0         \n",
       "                                                                 \n",
-      " activation (Activation)     (None, 6, 21)             0         \n",
+      " activation_2 (Activation)   (None, 6, 21)             0         \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 850,494\n",
@@ -422,27 +421,12 @@
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-01-03 15:38:28.204638: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "2023-01-03 15:38:28.204741: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
-     ]
     }
    ],
    "source": [
-    "swizzle_model = cnn_swizzle_model()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#let's have a look on the model summary to see the different layers and their shapes\n",
+    "#we have 3 dimensions in the beginning, then flatten to 1 Dimension for the dense layers and after them\n",
+    "#create the end shape representing the guitar with 6 strings and 21 frets\n",
     "swizzle_model.summary()"
    ]
   },
@@ -455,36 +439,27 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Metric: For our model we will use the accuracy metric, because we want to have o good overall prediction of our model. Besides that, for us every tone has the same importance so all classes have the same importance.\n",
-    "\n",
-    "Optimizer: As an optimizer we take the adam optimizer, which is fast enough to handle our data in a     short time\n",
-    "\n",
-    "Loss function: For the loss function we take the categorical_crossentropy. Why?"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = tf.keras.optimizers.Adam(learning_rate=0.001)\n",
+    "'''\n",
+    "Metric: For our model we will use the accuracy metric, because we want to have o good overall \n",
+    "prediction of our model. Besides that, for us every tone has the same importance so all classes\n",
+    "have the same importance.\n",
     "\n",
+    "Optimizer: As an optimizer we take the adam optimizer, which is fast enough to handle our data \n",
+    "in a short time\n",
+    "\n",
+    "Loss function: For the loss function we take the categorical_crossentropy. Why?\n",
+    "'''\n",
+    "\n",
+    "optimizer = tf.keras.optimizers.Adam(learning_rate=0.001)\n",
     "#we keep this for later, to test out.\n",
     "#RMSprop(lr=0.001, rho=0.9, epsilon=1e-08, decay=0.0) \n",
-    "#adadelta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#adadelta\n",
+    "\n",
     "swizzle_model.compile(loss='categorical_crossentropy',optimizer='adam',metrics=['accuracy'])"
    ]
   },
@@ -511,6 +486,10 @@
    "outputs": [],
    "source": [
     "# Set a learning rate annealer\n",
+    "'''\n",
+    "With the ReduceLROnPlateau function from Keras.callbacks, \n",
+    "we choose to reduce the Learning Rate by half if the accuracy is not improved after 3 epochs.\n",
+    "'''\n",
     "learning_rate_reduction = ReduceLROnPlateau(monitor='val_accuracy', patience=3, verbose=1, factor=0.5, min_lr=0.0001)"
    ]
   },
@@ -524,35 +503,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/8\n",
-      "5/5 [==============================] - 1s 77ms/step - loss: 0.2703 - accuracy: 0.9245 - val_loss: 0.2825 - val_accuracy: 0.9093 - lr: 2.5000e-04\n",
+      "Epoch 1/8\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-01-04 12:47:52.068088: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5/5 [==============================] - ETA: 0s - loss: 6.8040 - accuracy: 0.2435"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-01-04 12:47:53.185416: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5/5 [==============================] - 2s 180ms/step - loss: 6.8040 - accuracy: 0.2435 - val_loss: 1.4749 - val_accuracy: 0.7426 - lr: 0.0010\n",
       "Epoch 2/8\n",
-      "5/5 [==============================] - 0s 56ms/step - loss: 0.2630 - accuracy: 0.9259 - val_loss: 0.2797 - val_accuracy: 0.9118 - lr: 2.5000e-04\n",
+      "5/5 [==============================] - 0s 50ms/step - loss: 1.3316 - accuracy: 0.6306 - val_loss: 0.6042 - val_accuracy: 0.9069 - lr: 0.0010\n",
       "Epoch 3/8\n",
-      "5/5 [==============================] - 0s 66ms/step - loss: 0.2559 - accuracy: 0.9270 - val_loss: 0.2679 - val_accuracy: 0.9118 - lr: 2.5000e-04\n",
+      "5/5 [==============================] - 0s 52ms/step - loss: 0.6422 - accuracy: 0.8468 - val_loss: 0.4090 - val_accuracy: 0.9069 - lr: 0.0010\n",
       "Epoch 4/8\n",
-      "5/5 [==============================] - 0s 52ms/step - loss: 0.2531 - accuracy: 0.9273 - val_loss: 0.2648 - val_accuracy: 0.9093 - lr: 2.5000e-04\n",
+      "5/5 [==============================] - 0s 54ms/step - loss: 0.4527 - accuracy: 0.8945 - val_loss: 0.3809 - val_accuracy: 0.9069 - lr: 0.0010\n",
       "Epoch 5/8\n",
-      "5/5 [==============================] - ETA: 0s - loss: 0.2516 - accuracy: 0.9300\n",
-      "Epoch 5: ReduceLROnPlateau reducing learning rate to 0.0001250000059371814.\n",
-      "5/5 [==============================] - 0s 57ms/step - loss: 0.2516 - accuracy: 0.9300 - val_loss: 0.2487 - val_accuracy: 0.9118 - lr: 2.5000e-04\n",
+      "5/5 [==============================] - ETA: 0s - loss: 0.3738 - accuracy: 0.9085\n",
+      "Epoch 5: ReduceLROnPlateau reducing learning rate to 0.0005000000237487257.\n",
+      "5/5 [==============================] - 0s 47ms/step - loss: 0.3738 - accuracy: 0.9085 - val_loss: 0.3402 - val_accuracy: 0.9069 - lr: 0.0010\n",
       "Epoch 6/8\n",
-      "5/5 [==============================] - 0s 54ms/step - loss: 0.2360 - accuracy: 0.9331 - val_loss: 0.2444 - val_accuracy: 0.9118 - lr: 1.2500e-04\n",
+      "5/5 [==============================] - 0s 44ms/step - loss: 0.3354 - accuracy: 0.9149 - val_loss: 0.3188 - val_accuracy: 0.9069 - lr: 5.0000e-04\n",
       "Epoch 7/8\n",
-      "5/5 [==============================] - 0s 53ms/step - loss: 0.2375 - accuracy: 0.9322 - val_loss: 0.2408 - val_accuracy: 0.9142 - lr: 1.2500e-04\n",
+      "5/5 [==============================] - 0s 44ms/step - loss: 0.3162 - accuracy: 0.9179 - val_loss: 0.3072 - val_accuracy: 0.9069 - lr: 5.0000e-04\n",
       "Epoch 8/8\n",
-      "5/5 [==============================] - 0s 56ms/step - loss: 0.2321 - accuracy: 0.9309 - val_loss: 0.2370 - val_accuracy: 0.9142 - lr: 1.2500e-04\n"
+      "5/5 [==============================] - ETA: 0s - loss: 0.3111 - accuracy: 0.9176\n",
+      "Epoch 8: ReduceLROnPlateau reducing learning rate to 0.0002500000118743628.\n",
+      "5/5 [==============================] - 0s 45ms/step - loss: 0.3111 - accuracy: 0.9176 - val_loss: 0.2934 - val_accuracy: 0.9069 - lr: 5.0000e-04\n"
      ]
     }
    ],
    "source": [
+    "#for the training we fit our model and use the batch size and epochs from our constants\n",
     "history = swizzle_model.fit( x_train,\n",
     "                             y_train,\n",
     "                             batch_size=BATCH_SIZE,\n",
@@ -629,45 +638,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#swizzle_model.save('cnn_Tabs_of_songs_with_8_epochs.h5')"
+    "#the prediction of our model will show us an array with the strings played in the\n",
+    "# belonging frame\n",
+    "output = swizzle_model.predict(x_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[1.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "        0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ],\n",
-       "       [0.99, 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.01, 0.  ,\n",
-       "        0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ],\n",
-       "       [0.32, 0.  , 0.01, 0.  , 0.  , 0.  , 0.23, 0.28, 0.  , 0.13, 0.  ,\n",
-       "        0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.01, 0.  ],\n",
-       "       [0.97, 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.03, 0.  ,\n",
-       "        0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ],\n",
-       "       [1.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "        0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ],\n",
-       "       [1.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "        0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ]],\n",
-       "      dtype=float32)"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(289, 6, 21)\n",
+      "[[0.98 0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
+      "  0.   0.01 0.   0.   0.   0.   0.  ]\n",
+      " [0.94 0.   0.   0.   0.   0.   0.   0.02 0.   0.02 0.   0.   0.01 0.\n",
+      "  0.   0.   0.   0.   0.   0.   0.  ]\n",
+      " [0.55 0.   0.   0.   0.   0.   0.13 0.21 0.   0.09 0.   0.   0.   0.\n",
+      "  0.   0.   0.   0.   0.   0.01 0.  ]\n",
+      " [0.84 0.   0.   0.   0.   0.   0.   0.   0.   0.14 0.   0.   0.   0.\n",
+      "  0.   0.   0.   0.   0.   0.   0.  ]\n",
+      " [0.99 0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
+      "  0.   0.   0.   0.   0.   0.   0.  ]\n",
+      " [1.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
+      "  0.   0.   0.   0.   0.   0.   0.  ]]\n"
+     ]
     }
    ],
    "source": [
-    "output = swizzle_model.predict(x_test)\n",
+    "#we can have look on the output arrays. We rounded them to have a better overview. \n",
+    "#Thats the first entry with a size of 6 by 21.\n",
+    "print(output.shape)\n",
+    "print(np.round(output[:1][0],2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#swizzle_model.save('cnn_Tabs_of_songs_with_8_epochs.h5')\n",
+    "'''\n",
+    "next:\n",
+    "- we have to use a pickle function\n",
+    "- where we save the model?\n",
     "\n",
-    "np.round(output[:2][0],2)\n"
+    "\n",
+    "'''"
    ]
   }
  ],
