--- a/notebooks/postprocessing.ipynb
+++ b/notebooks/postprocessing.ipynb
@@ -22,6 +22,65 @@
    "source": [
     "This notebook shows our postprocessing pipeline for one example."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Input"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Input will be a list of arrays with shape 6x21. The list length will vary from song to song.\n",
+    "\n",
+    "1. The arrays come from overlapping timeframes, so that data from array $a_0$ can still be found in arrays $a_1$ to $a_8$.\n",
+    "\n",
+    "1. We don't know what data that is."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imports\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'app'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mapp\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpreprocessing\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mprepro\u001b[39;00m \u001b[39mimport\u001b[39;00m PreProcessor\n\u001b[1;32m      3\u001b[0m p \u001b[39m=\u001b[39m PreProcessor()\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'app'"
+     ]
+    }
+   ],
+   "source": [
+    "labeldata = np.load('../data/output/training_labels.npz')"
+   ]
   }
  ],
  "metadata": {
@@ -40,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.8 (main, Oct 17 2022, 15:15:06) \n[Clang 13.1.6 (clang-1316.0.21.2.5)]"
   },
   "orig_nbformat": 4,
   "vscode": {
