update app modely

--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -928,12 +928,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.8 (main, Oct 18 2022, 17:01:55) \n[Clang 14.0.0 (clang-1400.0.29.102)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c883442287411cfd35d895069543a936e2e23cdf2e951a28e4bcbe06352d4147"
+    "hash": "ed92ed0fba541c862e86ee21ecee011cf22ecee6c420718af9366c491a88b484"
    }
   }
  },
