--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2474,7 +2474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.8 (main, Oct 17 2022, 15:15:06) \n[Clang 13.1.6 (clang-1316.0.21.2.5)]"
   },
   "orig_nbformat": 4,
   "vscode": {
