Changes to try cnn again

--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -79,7 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.9.0\n"
+      "2.8.0\n"
      ]
     }
    ],
@@ -149,13 +149,13 @@
     "save_path = \"../app/model/\"\n",
     "\n",
     "#for all\n",
-    "#IMAGES = np.load(INPUT_PATH + 'training_data.npz')\n",
-    "#annots = np.load(INPUT_PATH + 'training_labels.npz')\n",
+    "IMAGES = np.load(INPUT_PATH + 'training_data.npz')\n",
+    "annots = np.load(INPUT_PATH + 'training_labels.npz')\n",
     "\n",
     "\n",
     "#for solo  \n",
-    "IMAGES = np.load(INPUT_PATH + 'training_datasolo.npz')\n",
-    "annots = np.load(INPUT_PATH + 'training_labelssolo.npz')"
+    "#IMAGES = np.load(INPUT_PATH + 'training_datasolo.npz')\n",
+    "#annots = np.load(INPUT_PATH + 'training_labelssolo.npz')"
    ]
   },
   {
@@ -170,7 +170,24 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    }
+   ],
    "source": [
     "#First we have to split our dataset into train and test set. We use 70% for the train set and 30% for the test set.\n",
     "train_images, test_images, train_annots, test_annots = train_test_split(IMAGES['arr_0'], annots['arr_0'], test_size= 0.3, random_state= RSEED )"
@@ -178,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,6 +256,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def catcross_by_string(target, output):\n",
+    "        loss = 0\n",
+    "        for i in range(N_STRINGS):\n",
+    "            loss += K.categorical_crossentropy(target[:,i,:], output[:,i,:])\n",
+    "        return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def avg_acc(y_true, y_pred):\n",
+    "        return K.mean(K.equal(K.argmax(y_true, axis=-1), K.argmax(y_pred, axis=-1)))"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -248,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +316,6 @@
     "        swizzle_model.add(tf.keras.layers.Flatten())\n",
     "        swizzle_model.add(tf.keras.layers.Dense(128, activation='relu'))\n",
     "        swizzle_model.add(tf.keras.layers.Dropout(0.5))\n",
-    "        swizzle_model.add(tf.keras.layers.Dense(126, activation='relu'))\n",
     "        swizzle_model.add(tf.keras.layers.Dense(N_CLASSES * N_STRINGS))\n",
     "        swizzle_model.add(tf.keras.layers.Reshape((N_STRINGS, N_CLASSES)))\n",
     "        swizzle_model.add(tf.keras.layers.Activation(softmax_by_string))\n",
@@ -285,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,13 +431,13 @@
     "with soft probabilities like [0.5, 0.3, 0.2] and also have a shape like a one-hot-encoded array.\n",
     "'''\n",
     "\n",
-    "metrics =['accuracy']\n",
+    "metrics = avg_acc\n",
     "\n",
-    "optimizer = tf.keras.optimizers.Adam(learning_rate=0.001)\n",
+    "optimizer = tf.keras.optimizers.Adadelta(learning_rate=1.0)\n",
     "\n",
     "loss='categorical_crossentropy'\n",
     "\n",
-    "swizzle_model.compile(loss=loss, optimizer=optimizer, metrics= 'accuracy')"
+    "swizzle_model.compile(loss=catcross_by_string, optimizer=optimizer, metrics= metrics)"
    ]
   },
   {
@@ -411,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,16 +488,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_logger = tf.keras.callbacks.CSVLogger('../data/model/metrics.csv')"
+    "csv_logger = tf.keras.callbacks.CSVLogger('../data/model/metrics_v2.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -550,13 +589,13 @@
     "                             callbacks=[learning_rate_reduction,csv_logger],\n",
     ")\n",
     "\n",
-    "swizzle_model_metrics = pd.read_csv('../data/model/metrics.csv')\n",
+    "swizzle_model_metrics = pd.read_csv('../data/model/metrics_v2.csv')\n",
     "print(swizzle_model_metrics.to_markdown())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -710,19 +749,19 @@
    ],
    "source": [
     "# Save the entire model as a SavedModel.\n",
-    "swizzle_model.save('../app/model/swizzle_model')\n",
+    "swizzle_model.save('../app/model/swizzle_model_v2')\n",
     "\n",
-    "loaded_swizzle_model = keras.models.load_model(\"../app/model/swizzle_model\")"
+    "loaded_swizzle_model = keras.models.load_model(\"../app/model/swizzle_model_v2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save and load the model output\n",
-    "np.save(\"../app/model/model_output.npy\", model_output, allow_pickle=True, fix_imports=True)\n",
+    "np.save(\"../app/model/model_output_v2.npy\", model_output, allow_pickle=True, fix_imports=True)\n",
     "\n",
     "#np.load(\"../app/model/model_output.npy\")\n"
    ]
@@ -749,7 +788,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "2ce22ec9b47a0c8818982fc2e83d14df8db5ffc759b38b6aa7930ef673c52175"
+    "hash": "c883442287411cfd35d895069543a936e2e23cdf2e951a28e4bcbe06352d4147"
    }
   }
  },
