--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -751,7 +751,7 @@
     "# Save the entire model as a SavedModel.\n",
     "swizzle_model.save('../app/model/swizzle_model_v2')\n",
     "\n",
-    "loaded_swizzle_model = keras.models.load_model(\"../app/model/swizzle_model_v2\")"
+    "loaded_swizzle_model = keras.models.load_model(\"../app/model/swizzle_model_v2\", compile = False)"
    ]
   },
   {
@@ -783,7 +783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.8 (main, Oct 17 2022, 15:26:33) \n[Clang 13.0.0 (clang-1300.0.29.3)]"
   },
   "orig_nbformat": 4,
   "vscode": {
